# HAM

./: .gitignore  LICENSE  POLISHING_PROGRESS.md  README.md  enable_verbose.py  patch_mesh.py  plot_figure8.py  pyproject.toml  refactor_B_gradients.py  test_out.txt  test_vmap.py
.github/agents/: code-reviewer.agent.md  doc-reviewer.agent.md  implementer.agent.md  math-reviewer.agent.md  research-architect.agent.md  review-orchestrator.agent.md  science-auditor.agent.md
.github/instructions/: review-conventions.instructions.md
.github/prompts/: full-codebase-review.prompt.md
.github/workflows/: test.yml
docs/: OPEN_ISSUES.md  eikonal_solver.md
examples/: demo_discrete_zermelo.py  demo_eikonal_fronts.py  demo_learned_wind.py  demo_panacreas.py  demo_physics_discovery.py  demo_train_winreb.py  demo_train_winreb_joint.py  demo_trajectories.py  demo_vae.py  demo_vae_latent.py  demo_vae_sphere.py  demo_vortex.py  demo_weinreb_vis.py  demo_zermelo.py  experiment_baseline_cellrank.py  experiment_gahtan_phase1.py  experiment_h1_geometric.py  experiment_h2_directional.py  experiment_h3_discriminative.py  experiment_h4_simulation.py  experiment_wildfire_flat.py  experiment_wildfire_geometric.py  experiment_wildfire_mesh.py  plot_publication_figs.py  plot_weinreb_destinations.py  preprocess_weinreb.py  train_vae_ablation.py  weinreb_experiment.py  weinreb_smoke_test.py  weinreb_vae.py
examples/notebooks/: demo_curved_manifolds.ipynb  demo_discrete_zermelo.ipynb  demo_generic_finsler.ipynb  demo_geodesic_shooting.ipynb  demo_high_dim_latent_geodesics.ipynb  demo_learned_wind.ipynb  demo_parallel_transport.ipynb  demo_vortex.ipynb  demo_zermelo.ipynb  experiment_W1_wildfire_flat.ipynb  experiment_W2_wildfire_mesh.ipynb
experiments/marine/: README.md  __init__.py  build_notebook.py  constraints.py  drifters.py  evaluate.py  forecast.py  marine_navigation.ipynb  medium.py  mpc.py  planners.py  run_stage_a_forward.py  run_stage_b_reconstruct.py  run_stage_c_timedependent.py  run_stage_d_mpc.py  vehicle.py
experiments/single_cell_synthetic/: README.md  __init__.py  baselines.py  build_notebook.py  dataset.py  drift.py  embedding.py  evaluate.py  generator.py  landscape.py  metric.py  run_stage_a_solver.py  run_stage_b_reconstruct.py  run_stage_c_asymmetry.py  run_stage_d_amortize.py  single_cell_synthetic.ipynb  solvers.py
experiments/wildfire/: evaluate_real_fire.py
legacy/ham/: __init__.py
notebooks/: README.md  geometry-check.ipynb
research/toy/: experiment_toy_ebm.py  experiment_toy_kde.py
research/weinreb/: experiment_h2_directional.py  experiment_h3_discriminative.py  experiment_h4_simulation.py  experiment_h5_diffusion_finsler.py  experiment_weinreb.py  experiment_weinreb_kde.py  metrics.py  plot_weinreb_cell_types.py  preprocess_weinreb.py  visualize_diffusion_geometry.py  visualize_diffusion_geometry_heatmap.py  visualize_weinreb_geometry.py  weinreb_experiment.py  weinreb_smoke_test.py  weinreb_vae.py
research/wildfire/: experiment_wildfire_flat.py  experiment_wildfire_geometric.py  experiment_wildfire_mesh.py
reviews/: REPORT.md  REPORT_2026-06-12.md
reviews/code/: arrival_time_loss.md  avbd.md  check_data.md  curvature.md  data.md  demo_discrete_zermelo.md  demo_learned_wind.md  demo_trajectories.md  demo_vortex.md  demo_weinreb_vis.md  demo_zermelo.md  experiment_gahtan_phase1.md  experiment_wildfire_mesh.md  experiment_wildfire_training_loop.md  fields.md  geodesic.md  hyperbolic.md  learned.md  losses.md  losses_arrival_time_v2.md  manifold.md  math.md  mesh.md  metric.md  networks.md  pipeline.md  plot_publication_figs.md  plot_weinreb_cell_types.md  plot_weinreb_destinations.md  preprocess_weinreb.md  surfaces.md  terrain.md  test_fields.md  test_geodesic.md  test_geodesic_learning.md  test_hyperbolic_vae.md  test_hyperboloid.md  test_joint_training.md  test_learned_metric.md  test_mesh.md  (+20 more)
reviews/docs/: avbd.md  check_data.md  curvature.md  data.md  demo_discrete_zermelo.md  demo_learned_wind.md  demo_trajectories.md  demo_vortex.md  demo_weinreb_vis.md  demo_zermelo.md  fields.md  geodesic.md  hyperbolic.md  learned.md  losses.md  manifold.md  math.md  mesh.md  metric.md  networks.md  pipeline.md  plot_publication_figs.md  plot_weinreb_cell_types.md  plot_weinreb_destinations.md  preprocess_weinreb.md  surfaces.md  train_geodesic.md  train_joint.md  train_modular.md  train_vae_ablation.md  transport.md  vae.md  vis.md  weinreb_smoke_test.md  weinreb_vae.md  zoo.md
reviews/math/: avbd.md  avbd_ift_adjoint.md  curvature.md  data.md  demo_discrete_zermelo.md  demo_learned_wind.md  demo_trajectories.md  (+50 more)
scratch/: make_notebooks.py  make_rich_notebooks.py  test_scan_grad.py
scripts/: visualize_e2e_geodesic.py  visualize_geodesic_learning.py
spec/: ARCH_SPEC.md  AVBD_LATENT_FINDINGS_2026-06-14.md  MATH_SPEC.md  RESEARCH_LOG.md  ebm_weinreb_design_doc.md  single_cell_synthetic_FINDINGS.md  verification_report.md  verify.py
src/: __init__.py
tests/: _precision.py  conftest.py  test_arrival_time_loss.py  test_avbd.py  test_bio_vae.py  test_covariate_randers.py  test_curvature.py  test_e2e_geodesic.py  test_e2e_with_velocities.py  test_eikonal_solver.py  test_fields.py  test_gauss_newton.py  test_geodesic.py  test_geodesic_learning.py  test_graph_init.py  test_hyperbolic_vae.py  test_hyperboloid.py  test_implicit_diff_avbd.py  test_joint_training.py  test_learned_metric.py  test_manifold.py  test_marching_cubes.py  test_marine.py  test_mesh.py  test_mesh_eikonal.py  test_mesh_solver.py  test_metric.py  test_network.py  test_networks.py  test_parallel_avbd.py  test_pipeline.py  test_quadrature_metric.py  test_single_cell_synthetic.py  test_solver.py  test_src_deep_review.py  test_surfaces.py  test_terrain.py  test_transport.py  test_utils_math.py  test_volumetric_eikonal.py  (+2 more)
(+184 files in other folders)
