[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hamtools"
version = "0.1.0"
description = "A differentiable library for learnable Finsler Geometry and Holonomic Association Models."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "HAM Research Team", email = "hubibala@protonmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "equinox>=0.10.0",
    "optax>=0.1.0",
    "numpy",
    "anndata",
    "scanpy",
    "scvelo",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "matplotlib",
    "jupyter",
]

[project.urls]
Homepage = "https://github.com/hubibala/ham"
Bug_Tracker = "https://github.com/hubibala/ham/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ham*"]